# omp-dynamic-slots

./: .gitmodules  CMakeLists.txt  README.md  advanced_query.inc  main.cpp
.github/workflows/: ci.yml
